--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
     </div>
 
-    <script type="module" src="/src/scene.ts"></script>
+    <script type="module" src="/src/scene.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
