--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div id="zone-joystick" class="joystick"></div>
 
-    <div class="hex-container hex-music">
+    <!-- <div class="hex-container hex-music">
       <img
         id="sound"
         class="icon"
@@ -61,13 +61,13 @@
       />
       <div class="hex hex-one"></div>
       <div class="hex hex-two"></div>
-    </div>
+    </div> -->
 
-    <div class="hex-container hex-info">
+    <!-- <div class="hex-container hex-info">
       <img class="icon" src="assets/icons/info.svg" alt="Info" />
       <div class="hex hex-one"></div>
       <div class="hex hex-two"></div>
-    </div>
+    </div> -->
 
     <div class="hex-container hex-speed">
       <img class="icon" src="assets/icons/speed.svg" alt="Speed" />
